--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -6,6 +6,10 @@ events {
 }
 
 http {
+    # Rate limiting
+    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
+    limit_req_zone $binary_remote_addr zone=general:10m rate=30r/s;
+
     # Basic settings
     sendfile on;
     tcp_nopush on;
@@ -65,6 +69,7 @@ http {
 
         # Main location - proxy to Flask app
         location / {
+            limit_req zone=general burst=20 nodelay;
             proxy_pass http://flask_app;
             proxy_redirect off;
         }
